--- a/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -22,16 +22,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="saving-cate.png" translatesAutoresizingMaskIntoConstraints="NO" id="aOo-vc-KOf">
-                        <rect key="frame" x="18" y="8" width="47" height="47"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="aOo-vc-KOf" secondAttribute="height" multiplier="1:1" id="FFB-mK-VzR"/>
-                            <constraint firstAttribute="width" constant="47" id="ZsA-Ha-RLi"/>
-                            <constraint firstAttribute="height" constant="47" id="cjv-Dr-EZK"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Gorup Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjD-IM-oCa">
-                        <rect key="frame" x="75" y="8" width="100" height="25"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gorup Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjD-IM-oCa">
+                        <rect key="frame" x="75" y="12" width="100" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="MxG-9Z-3e0"/>
                         </constraints>
@@ -39,8 +31,8 @@
                         <color key="textColor" red="0.50980392156862742" green="0.50980392156862742" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-re-Qcr">
-                        <rect key="frame" x="75" y="33" width="237" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-re-Qcr">
+                        <rect key="frame" x="75" y="37" width="237" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="237" id="cD6-pO-72o"/>
                         </constraints>
@@ -48,16 +40,25 @@
                         <color key="textColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.68235294117647061" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="saving-cate.png" translatesAutoresizingMaskIntoConstraints="NO" id="aOo-vc-KOf">
+                        <rect key="frame" x="20" y="16" width="47" height="47"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="aOo-vc-KOf" secondAttribute="height" multiplier="1:1" id="FFB-mK-VzR"/>
+                            <constraint firstAttribute="width" constant="47" id="ZsA-Ha-RLi"/>
+                            <constraint firstAttribute="height" constant="47" id="cjv-Dr-EZK"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="EjD-IM-oCa" secondAttribute="trailing" constant="10" id="1nA-zS-1Q8"/>
-                    <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="10" id="4Jn-hZ-wKv"/>
-                    <constraint firstItem="aOo-vc-KOf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="Dyo-9C-e1j"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="obs-re-Qcr" secondAttribute="trailing" constant="5" id="K67-Q5-HxQ"/>
-                    <constraint firstItem="EjD-IM-oCa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Rzl-qm-PJs"/>
-                    <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="TAX-mc-dOv"/>
-                    <constraint firstItem="EjD-IM-oCa" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="10" id="e02-W2-mXc"/>
-                    <constraint firstItem="aOo-vc-KOf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wAP-Jz-j42"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="EjD-IM-oCa" secondAttribute="trailing" constant="137" id="1nA-zS-1Q8"/>
+                    <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="4Jn-hZ-wKv"/>
+                    <constraint firstItem="aOo-vc-KOf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Dyo-9C-e1j"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="obs-re-Qcr" secondAttribute="trailing" id="K67-Q5-HxQ"/>
+                    <constraint firstItem="EjD-IM-oCa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="Rzl-qm-PJs"/>
+                    <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="29" id="TAX-mc-dOv"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="obs-re-Qcr" secondAttribute="bottom" constant="4" id="YiW-oz-qLM"/>
+                    <constraint firstItem="EjD-IM-oCa" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="e02-W2-mXc"/>
+                    <constraint firstItem="aOo-vc-KOf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="wAP-Jz-j42"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
