--- a/Savio/SavingPlanSetupCells/GroupCalculationTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/GroupCalculationTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -51,6 +51,7 @@
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="BGContentView" destination="H2p-sc-9uM" id="rOv-Ay-XDY"/>
                 <outlet property="calculationLabel" destination="b3O-H4-Wak" id="zW3-Dx-OoA"/>
                 <outlet property="percentageCalculationLabel" destination="nZs-4l-H7x" id="FTE-7e-eXo"/>
             </connections>
