--- a/Savio/SavingPlanSetupCells/SavingPlanDatePickerTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/SavingPlanDatePickerTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -64,6 +64,7 @@
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="BGContentView" destination="H2p-sc-9uM" id="Us6-nt-mve"/>
                 <outlet property="calenderImageView" destination="FGe-Uz-7bK" id="XaR-fb-rRx"/>
                 <outlet property="datePickerTextField" destination="PHM-mG-7Lk" id="8Ha-1P-DQm"/>
             </connections>
@@ -71,6 +72,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="generic-calendar@1x.png" width="85" height="85"/>
+        <image name="generic-calendar@1x.png" width="12" height="12"/>
     </resources>
 </document>
